--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:8086/v1/
-REACT_APP_API_URL1=https://versity-tutors-home-api.onrender.com/v1/
+REACT_APP_API_URL1=http://localhost:8086/v1/
+REACT_APP_API_URL=https://versity-tutors-home-api.onrender.com/v1/
 REACT_APP_IMG_URL=http://localhost:8086
